# agentic-research-graph

./: .gitignore  README.md  main.py  pyproject.toml
agents/: __init__.py  base_agent.py  graph_explorer_agent.py  hypothesis_agent.py  ontology_learner_agent.py  planner_agent.py  research_agent.py  validation_agent.py
controller/: __init__.py  research_controller.py
data/: 01_police_incident_report.txt  02_witness_statement_chen.txt  03_harrington_letter_to_lawyer.txt  04_financial_audit_q3_1987.txt  05_alpine_consulting_registry.txt  06_medtech_internal_memo.txt  07_lab_accident_report_april87.txt  08_price_phone_records.csv  09_westbrook_chronicle_obituary.txt  10_toxicology_report.txt  11_chen_private_diary.txt  12_alpine_consulting_bank_statement.json
graph/: __init__.py  knowledge_graph.py
ingestion/: __init__.py  multimodal_ingestion.py
llm/: __init__.py  llm.py
memory/: __init__.py  memory.py
ontology/: __init__.py  ontology.py
tools/: __init__.py  tools.py
